# taiwan-judicial-judgments-crawler

./: .env.example  .gitignore  Makefile  prompt.md  pyproject.toml
src/: main.py
src/taiwan_judicial_judgments_crawler/adapters/file_system/: judgement_file_system_adapter.py
src/taiwan_judicial_judgments_crawler/adapters/playwright/: judgement_list_page.py  judgement_search_form_page.py
src/taiwan_judicial_judgments_crawler/entrypoints/: cli.py
src/taiwan_judicial_judgments_crawler/modules/crawling/: __init__.py
src/taiwan_judicial_judgments_crawler/modules/crawling/application/commands/: collect_entries.py  crawl.py
src/taiwan_judicial_judgments_crawler/modules/crawling/domain/ports/driven/: judgement_repository.py
src/taiwan_judicial_judgments_crawler/modules/crawling/domain/services/: case_number_extractor.py  case_type_normalizer.py  court_code_transformer.py  court_name_normalizer.py  entries_collector.py  json_parser.py  minguo_date_transformer.py  output_path_calculator.py  text_parser.py
src/taiwan_judicial_judgments_crawler/modules/crawling/exceptions/: invalid_date.py
src/taiwan_judicial_judgments_crawler/modules/crawling/presentation/cli/handlers/: handle_scan.py
src/taiwan_judicial_judgments_crawler/modules/general/: __init__.py
src/taiwan_judicial_judgments_crawler/modules/general/enums/: token.py
src/taiwan_judicial_judgments_crawler/utils/lifespan/: shutdown.py  startup.py
src/taiwan_judicial_judgments_crawler/utils/logging/: setup_logging.py
