[project]
dependencies = [
  "playwright",
  "httpx",
  "aiofiles",
  "beautifulsoup4",
  "fire",
  "injector",
  "langchain",
  "langchain_openai",
  "json-repair",
]
name = "taiwan-judicial-judgments-crawler"
requires-python = ">=3.13,<3.14"
version = "0.1.0"

[tool.playwright]
browsers = ["chromium"]

pythonpath = ["./src"]
